Use Numpy for metrics calculation and improve response for k-fold

--- a/fundamentos_AI_machine_learning/boston_housing/boston_housing_PT.ipynb
+++ b/fundamentos_AI_machine_learning/boston_housing/boston_housing_PT.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
       "Preço máximo: $1,024,800.00\n",
       "Preço médio: $454,342.94\n",
       "Preço mediano: $438,900.00\n",
-      "Desvio padrão dos preços: $165,340.28\n"
+      "Desvio padrão dos preços: $165,171.13\n"
      ]
     },
     {
@@ -165,26 +165,27 @@
        "Name: MEDV, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Nota: Utilizando o Numpy por requisito da rúbrica.\n",
     "# TODO: Preço mínimo dos dados\n",
-    "minimum_price = prices.min()\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "# TODO: Preço máximo dos dados\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Preço médio dos dados\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "# TODO: Preço mediano dos dados\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "# TODO: Desvio padrão do preço dos dados\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Mostrar as estatísticas calculadas\n",
     "print(\"Estatísticas para os dados dos imóveis de Boston:\\n\")\n",
@@ -447,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: ** Quando `max_depth` é 3 é possível perceber que a partir de 300 pontos não é preciso adicionar mais pontos de treinamento por conta da convergência entre as curvas de treinamento e testes."
+    "**Resposta: ** Quando `max_depth` é 3 é possível perceber que próximo aos 300 pontos não é preciso adicionar mais pontos por conta da convergência entre as curvas de treinamento e testes. Tais curvas demonstram que o score de ambas ficou fixo em, aproximadamente, 0.8."
    ]
   },
   {
@@ -517,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: ** O melhor valor para `max_depth` é 3 porque é o ponto onde estão os melhores scores de treinamento e testes. A partir de `max_depth` 4 o modelo passa a apresentar **overfiting**."
+    "**Resposta: ** O melhor valor para `max_depth` é 3 porque é o ponto onde estão os melhores scores de treinamento e testes. A partir de `max_depth` 4 o modelo passa a apresentar **overfitting**."
    ]
   },
   {
@@ -565,9 +566,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta: ** A ténica *k-fold* consiste em dividir os dados de treinamento em *k* partes afim de poder executar `k-1` treinamentos e ainda ter 1 conjunto de dados separado para a validação. Esta técnica é interessante pois nos possibilita um melhor aproveitamento dos dados, tendo em vista que utilizamos grande parte deles para treinar o modelo, e ainda assim manter uma parte dos dados exclusivamente para testes/validação, não quebrando a regra de não usar dados de validação para treinamento. Além diosso iremos reduzir a possibilidade do modelo desenvolver **overfiting**.\n",
+    "**Resposta: ** Aprender os parâmetros de uma função de previsão e testá-los nos mesmos dados é um erro metodológico: um modelo que apenas repetiria os rótulos (*labels*) das amostras que acabara de ver teria uma pontuação (*score*) perfeita mas falharia em prever qualquer coisa útil em dados ainda não vistos. Esta situação é chamada de **overfitting**.\n",
     "\n",
-    "Para a busca em matriz esta técnica é particularmente útil pois podemos testar as combinações de hiperparametros em conjuntos de dados diferentes e depois avaliar qual quais parametros produziram o melhor score."
+    "Ao avaliar diferentes configurações (*hyperparameters*) para os estimadores (*estimators*) ainda há um risco de **overfitting** no conjunto de teste porque os parâmetros podem ser ajustados até que o estimador execute otimamente. Desta maneira o conhecimento do conjunto de teste acaba vazando dentro do modelo e as métricas de avaliação não tem mais a mesma performance em generalizar sobre os dados. Para resolver este problema uma outra parte do conjunto de dados pode ser separada em um assim chamado \"conjunto de validação\". Agora o treinamento ocorre no conjunto de treino, depois dele a validação é executada no conjunto de validação e, quando o experimento parecer ser bem sucedido, a avaliação final pode ser feita no conjunto de teste.\n",
+    "\n",
+    "Entretanto, ao particionar os dados disponíveis em três conjuntos nós reduzímos drasticamente o número de amostras que podem ser utilizados para a aprendizagem do modelo e os resultados podem depender de uma escolha aleatória para o par (treinamento, validação) de conjuntos.\n",
+    "\n",
+    "Uma solução para este problema é o procedimento chamado de validação cruzada (*CV* em inglês). Onde o conjunto de teste ainda precisa ser separado para a avaliação final, mas o conjunto de validação não é mais necessário. Na abordagem básica, chamada **k-fold** CV, o conjunto de treinamento é dividido em **k** conjuntos menores. O seguinte processo é aplicado em cada uma das k-\"dobras\":\n",
+    "* O modelo é treinado utilizando `k-1` das dobras como dados de treinamento;\n",
+    "* o modelo resultante é validado no parte restante dos dados (i.e. ele é utilizado como conjunto de testes para computar a medida de performace, tal como a precisão (*accuracy*).\n",
+    "\n",
+    "A medida de performace reportada pela validação cruzada k-fold é então a média dos valores computados no *loop*."
    ]
   },
   {
