Improve answer for question 01

--- a/fundamentos_AI_machine_learning/boston_housing/boston_housing_PT.ipynb
+++ b/fundamentos_AI_machine_learning/boston_housing/boston_housing_PT.ipynb
@@ -221,9 +221,9 @@
    "metadata": {},
    "source": [
     "**Resposta: **\n",
-    "- Espero que custe menos porque casas com mais comodos costumam ser maiores e mais caras.\n",
-    "- Espero que custe menos porque uma população com renda mais baixa costuma viver em imóveis mais baratos.\n",
-    "- Menos porque bairros de classe alta geralmente tem menos estudantes por professor nas escolas."
+    "- Um aumento em `RM` resultará em preços maiores (`MEDV` maior) pois, geralmente, uma casa com mais cômodos é uma casa com área útil maior.\n",
+    "- Um aumento em `LSTAT` resultará em preços menores (`MEDV` menor) porque indica que a renda socioeconômica da vizinhança é baixa e o mainstream acredita que isso impacta negativamente em questões como: infraestrutura, segurança e acessibilidade.\n",
+    "- Um aumento em `PTRATIO` resultará em preços menores (`MEDV` menor) pelo mesmo princícpio descrito no item anterior, `LSTAT`."
    ]
   },
   {
